--- a/themes/hugo-theme-cleanwhite/layouts/partials/footer.html
+++ b/themes/hugo-theme-cleanwhite/layouts/partials/footer.html
@@ -66,7 +66,8 @@
                         </a>
                     </li>
 		    {{ end }}
-
+		    
+		    
 		    <!-- Huabing: add wechat QR code link -->
                     {{ with .Site.Params.social.wechat }}
                     <li>
@@ -118,6 +119,19 @@
                         </a>
                     </li>
 		    {{ end }}
+		    
+    		           {{ with .Site.Params.social.youtube }}
+                   <li>
+                       <a target="_blank" href="{{ . }}">
+                           <span class="fa-stack fa-lg">
+                               <i class="fa fa-circle fa-stack-2x"></i>
+                               <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+                           </span>
+                       </a>
+                   </li>
+               {{ end }}
+
+		    
                     {{ with .Site.Params.social.medium }}
                     <li>
                         <a target="_blank" href="{{ . }}">
