--- a/themes/hugo-theme-cleanwhite/layouts/partials/sidebar.html
+++ b/themes/hugo-theme-cleanwhite/layouts/partials/sidebar.html
@@ -170,6 +170,16 @@
                         </a>
                     </li>
             {{ end }}
+            {{ with .Site.Params.social.youtube }}
+               <li>
+                   <a target="_blank" href="{{ . }}">
+                       <span class="fa-stack fa-lg">
+                           <i class="fa fa-circle fa-stack-2x"></i>
+                           <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+                       </span>
+                   </a>
+               </li>
+               {{ end }}
             {{ with .Site.Params.social.mastodon }}
                <li>
                    <a target="_blank" href="{{ . }}">
